[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/scenes/1/Door_Light.png" type="Texture" id=1]
[ext_resource path="res://assets/scenes/1/Background.png" type="Texture" id=2]
[ext_resource path="res://assets/scenes/2/closet.png" type="Texture" id=3]
[ext_resource path="res://assets/scenes/1/DustOverlay.png" type="Texture" id=4]
[ext_resource path="res://assets/scenes/1/Floor.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Transition_Scene.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/scenes/3/StairsUP.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Pantry.gd" type="Script" id=8]
[ext_resource path="res://assets/scenes/4/Dispensa.png" type="Texture" id=9]
[ext_resource path="res://assets/items/redkey2.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Control.gd" type="Script" id=12]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 258.124, 1082.38, 259.906, 973.694, 293.76, 1003.98, 1917.37, 1083.6, 642.993, 1009.33, 694.665, 975.476, 1918.76, 977.257 )
polygons = [ PoolIntArray( 0, 1, 2 ), PoolIntArray( 3, 0, 2, 4 ), PoolIntArray( 3, 4, 5, 6 ) ]
outlines = [ PoolVector2Array( 259.906, 973.694, 258.124, 1082.38, 1917.37, 1083.6, 1918.76, 977.257, 694.665, 975.476, 642.993, 1009.33, 293.76, 1003.98 ) ]

[node name="Pantry" type="Node"]
script = ExtResource( 8 )

[node name="Control" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 954.44, 546.933 )
mouse_filter = 2
mouse_default_cursor_shape = 3
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area_Move" type="Control" parent="Control"]
anchor_top = 0.887
anchor_right = 0.999
anchor_bottom = 1.001
margin_left = 242.0
margin_top = 5.03998
margin_right = -366.08
margin_bottom = 78.9199
rect_scale = Vector2( 1.28, 0.6 )
mouse_default_cursor_shape = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Environment" type="Node" parent="Control"]

[node name="StairsUP" type="Sprite" parent="Control/Environment"]
position = Vector2( 13.416, 828.78 )
scale = Vector2( 0.594484, 0.594484 )
texture = ExtResource( 7 )

[node name="Background" type="Sprite" parent="Control/Environment"]
z_index = -1
texture = ExtResource( 2 )
centered = false

[node name="Floor" type="Sprite" parent="Control/Environment"]
position = Vector2( 6.10352e-05, 0 )
scale = Vector2( 1, 1.00196 )
z_index = -1
texture = ExtResource( 5 )
centered = false

[node name="Door_Light" type="Sprite" parent="Control/Environment"]
z_index = -1
texture = ExtResource( 1 )
centered = false
flip_h = true

[node name="closet" type="Sprite" parent="Control/Environment"]
position = Vector2( 646.404, 533.96 )
texture = ExtResource( 3 )

[node name="Dispensa" type="Sprite" parent="Control/Environment"]
position = Vector2( 1496.86, 698.658 )
scale = Vector2( 0.660904, 0.660904 )
texture = ExtResource( 9 )

[node name="Botoes" type="Node" parent="Control"]

[node name="Safe" type="TextureButton" parent="Control/Botoes"]
margin_left = 401.246
margin_top = 497.201
margin_right = 763.246
margin_bottom = 977.201
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door" type="TextureButton" parent="Control/Botoes"]
margin_left = 1680.0
margin_top = 424.0
margin_right = 1922.0
margin_bottom = 981.0
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stairs" type="TextureButton" parent="Control/Botoes"]
margin_left = -145.0
margin_top = 691.0
margin_right = 250.0
margin_bottom = 1102.0
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedKey" type="TextureButton" parent="Control/Botoes"]
margin_left = 1203.04
margin_top = 502.471
margin_right = 1265.04
margin_bottom = 564.471
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Navigation2D" type="Navigation2D" parent="Control"]
position = Vector2( 1.69409, -4.51978 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Control/Navigation2D"]
z_index = -1
navpoly = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="Control"]
position = Vector2( 1319.2, 1013.98 )
z_index = 5
points = PoolVector2Array( 599.861, 66.9915 )

[node name="DustOverlay" type="Sprite" parent="."]
position = Vector2( 958.415, 541.945 )
z_index = 4
texture = ExtResource( 4 )

[node name="Transition_Scene" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="Control/Botoes/Safe" to="." method="_on_Safe_pressed"]
[connection signal="pressed" from="Control/Botoes/Door" to="." method="_on_Door_pressed"]
[connection signal="pressed" from="Control/Botoes/Stairs" to="." method="_on_Stairs_pressed"]
[connection signal="pressed" from="Control/Botoes/RedKey" to="." method="_on_RedKey_pressed"]
[connection signal="transitioned" from="Transition_Scene" to="." method="_on_Transition_Scene_transitioned"]
